added minor fixes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
       <hr />
       <div class="contact-me">
-        <h2>Get In Touch</h2>
+        <h2 class="getintouch">Get In Touch</h2>
         <h3 class="contact-header">If you love hot wings as much as I do.</h3>
         <p class="contact-p">
           Let's talk about how awesome they are ! We can code while we eat hot
