updated code pictures and some stylings

--- a/index.html
+++ b/index.html
@@ -27,33 +27,30 @@
         <img class="personal-img" src="images/m_pic.png" alt="" />
         <h2 class="hello">Hello.</h2>
         <p class="personal-intro">
-          I am an Automation and Web developer. I ❤️ coffee and playing
+          I am a web and automation developer . I ❤️ coffee and playing
           badminton.
         </p>
       </div>
 
       <hr />
-      
+
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img
-            class="programming-skill"
-            src="https://www.flaticon.com/svg/static/icons/svg/2920/2920244.svg"
-            alt=""
-          />
+          <img class="programming-skill" src="images/code.png" alt="" />
           <h3 class="title">Design and Development</h3>
-          <p class="content">I started to code when I was 15 years old because I wanted to make
+          <p class="content">
+            I started to code when I was 15 years old because I wanted to make
             my own video games. Over time, I have gained a wealth of experience
-            desgning and developing web applications.
+            designing and developing web applications.
           </p>
         </div>
         <div class="skill-row">
           <img class="chillie" src="images/chillies.png" alt="" />
           <h3 class="title">Hot wings Challenges</h3>
           <p class="content">
-            One of my best skill is actually in eating hot wings. I like spciy
-            meals , Ghost Peppers and Carolina Reapers are my favourite snacks
+            One of my best skill is actually in eating hot wings. I like spicy
+            meals , Ghost Peppers and Carolina Reapers are my favorite snacks
             with fried chicken
           </p>
         </div>
@@ -72,10 +69,14 @@
       </div>
     </div>
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/mouhammad-kharboutli-480462b1"
+        >LinkedIn</a
+      >
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.facebook.com/">Facebook</a>
-      <p class="p-foot">© 2020 Mouhammad @ Complete Solutions.</p>
+      <p class="p-foot">© 2022 Mouhammad @ Cool designs.</p>
     </div>
   </body>
 </html>
